--- a/.env-exemple
+++ b/.env-exemple
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="String connection to database"
+SECRET_KEY="Secret key to generate JWT"
