--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "easy-whatsapp-bot",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
-  "private": true,
+  "description": "The simplest API for WhatsApp bots.",
+  "author": "Henrique Barucco",
+  "private": false,
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
@@ -33,7 +33,6 @@
     "class-validator": "^0.14.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
-    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
