--- a/package.json
+++ b/package.json
@@ -28,11 +28,14 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.2",
     "@prisma/client": "^5.0.0",
+    "@types/qrcode": "^1.5.1",
+    "@whiskeysockets/baileys": "^6.4.0",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
+    "qrcode": "1.5.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
