feat(Dockerfile): adiciona Dockerfile para construir e executar o aplicativo em um contêiner Docker chore(package.json): adiciona comando "prisma generate" ao script "build" O Dockerfile foi adicionado para facilitar a construção e execução do aplicativo em um ambiente de contêiner Docker. Ele define duas etapas: a primeira etapa é responsável por construir o aplicativo, instalando as dependências e executando o comando "npm run build". A segunda etapa copia os arquivos construídos da primeira etapa e define o comando "npm run start:prod" como o comando padrão a ser executado quando o contêiner for iniciado.
No arquivo package.json, o comando "prisma generate" foi adicionado ao script "build" para gerar os arquivos do Prisma antes de construir o aplicativo. Isso garante que os arquivos do

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "easy-whatsapp-bot",
+  "name": "easy-whatsapp-backend",
   "version": "0.0.1",
   "description": "The simplest API for WhatsApp bots.",
   "author": "Henrique Barucco",
   "private": false,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "nest build",
+    "build": "prisma generate && nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
