--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.1.3",
     "@nestjs/swagger": "^7.1.2",
+    "@nestjs/websockets": "^10.1.3",
     "@prisma/client": "^5.0.0",
     "@types/qrcode": "^1.5.1",
     "@whiskeysockets/baileys": "^6.4.0",
