--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/passport": "^10.0.0",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-express": "^10.2.2",
     "@nestjs/platform-socket.io": "^10.1.3",
     "@nestjs/swagger": "^7.1.2",
     "@nestjs/websockets": "^10.1.3",
@@ -35,6 +35,7 @@
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "qrcode": "1.5.1",
