--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "@nestjs/swagger": "^7.1.2",
     "@nestjs/websockets": "^10.1.3",
     "@prisma/client": "^5.0.0",
+    "@types/multer": "^1.4.7",
     "@types/qrcode": "^1.5.1",
     "@whiskeysockets/baileys": "^6.4.0",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "lodash": "^4.17.21",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
