--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,16 +1,13 @@
-version: '3.3'
 services:
-  easywhatsapp-db:
+  mysql:
     image: mysql:8.0
     environment:
       MYSQL_DATABASE: 'easy-whatsapp'
-      MYSQL_USER: 'usr_easy'
-      MYSQL_PASSWORD: 'easywhatsapp'
       MYSQL_ROOT_PASSWORD: 'root'
     ports:
       - '3306:3306'
     volumes:
-      - easywhatsapp-db:/var/lib/mysql
+      - easy-db:/var/lib/mysql
 
 volumes:
-  easywhatsapp-db:
+  easy-db:
