--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/qrcode": "^1.5.5",
     "baileys": "^6.7.7",
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "lodash": "^4.17.21",
