--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/src/main",
-  "prestart:prod": "prisma migrate deploy",
+    "prestart:prod": "prisma migrate deploy",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -31,6 +31,8 @@
     "@nestjs/platform-socket.io": "^10.4.1",
     "@nestjs/swagger": "^7.4.0",
     "@nestjs/websockets": "^10.4.1",
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.66.0",
     "@prisma/client": "^5.18.0",
     "@types/multer": "^1.4.12",
     "@types/qrcode": "^1.5.5",
@@ -46,7 +48,8 @@
     "qrcode": "1.5.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "winston": "^3.18.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.4.4",
