--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@types/multer": "^1.4.12",
     "@types/qrcode": "^1.5.5",
     "baileys": "^6.7.20",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
