--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "@nestjs/websockets": "^10.4.1",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/auto-instrumentations-node": "^0.66.0",
-    "@prisma/client": "^5.18.0",
+    "@prisma/adapter-pg": "^7.0.0",
+    "@prisma/client": "^7.0.0",
     "@types/multer": "^1.4.12",
     "@types/qrcode": "^1.5.5",
     "baileys": "^6.7.21",
@@ -47,6 +48,7 @@
     "multer": "1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "pg": "^8.16.3",
     "qrcode": "1.5.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
@@ -71,7 +73,7 @@
     "eslint-plugin-prettier": "^5.2.1",
     "jest": "^29.7.0",
     "prettier": "^3.3.3",
-    "prisma": "^5.18.0",
+    "prisma": "^7.0.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.4",
     "ts-jest": "^29.2.5",
