--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@nestjs/cli": "^10.4.4",
     "@nestjs/schematics": "^10.1.4",
     "@nestjs/testing": "^10.4.1",
+    "@prisma/config": "^7.0.0",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
@@ -98,5 +99,10 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "pnpm": {
+    "overrides": {
+      "zeptomatch": "link:./vendor/zeptomatch"
+    }
   }
 }
